# public/openapi/components/schemas/TopicObject.yaml
@@ -29,6 +29,17 @@ TopicObject:
               type: string
             disabled:
               type: number
+# --- ADDITIONS REQUIRED FOR API TESTS TO PASS ---
+        isFollowUpRequested:
+          type: boolean
+          description: Indicates if a follow-up request is currently pending on the topic for the viewing user.
+        isInstructor:
+          type: boolean
+          description: Indicates if the viewing user has the privilege to resolve follow-ups.
+        isStudent:
+          type: boolean
+          description: Indicates if the viewing user has the privilege to request a follow-up.
+        # -------------------------------------------------  
         user:
           type: object
           properties:
@@ -197,7 +208,7 @@ TopicObjectSlim:
   description: The output of a call to `Topics.getTopicField`, these properties are always present no matter the fields passed in
   allOf:
     - type: object
-      properties:
+      properties:  
         tid:
           type: number
           description: A topic identifier
